<resources>
    <string name="app_name">Game_Tra_Loi_Cau_Hoi</string>
    <string name="txtmat_khau">TextView</string>
    <string name="textUse_Name">TextView</string>
    <string name="btnDang_Nhap">Đăng Nhập</string>
    <string name="Quen_Mat_Khau">Quên Mật Khẩu</string>
    <string name="PassWord">TextView</string>
    <string name="Ten_Dang_Nhap">Tên Đăng Nhập</string>
    <string name="password">Nhập PassWord</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="Face">Đăng Nhập Với Facebook</string>
    <string name="google1">Đăng Nhập với Google</string>
    <string name="facebook0">TODO</string>
    <string name="google">TODO</string>
    <string name="facebook1">Đăng Nhập Với FaceBook</string>
    <string name="google2">Đăng Nhập Với Google</string>
    <string name="avt">TODO</string>
    <string name="quen_mat_khau1">Quên Mật Khẩu</string>
    <string name="mua_credit">Mua Credit</string>
    <string name="quan_li_tai_khoan">Quản Lý Tài Khoản</string>
    <string name="tro_choi_moi">Trò Chơi Mới</string>
    <string name="lich_su">Lịch Sử Chơi</string>
    <string name="bang_xep_hang">Bảng Xếp Hạng</string>
    <string name="TenDangNhap">Tên Đăng Nhập</string>
    <string name="CapNhat">Cập Nhật</string>
    <string name="Email">Nhập Email</string>
    <string name="passmoi">Nhập mật khẩu mới</string>
    <string name="xacnhanhpass">xác nhận mật khẩu mới</string>
    <string name="lay_lai_mk">Lấy lại mật khẩu</string>
    <string name="mat_khau">Nhập mật khẩu</string>
    <string name="txtEmail1">TODO</string>
    <string name="txtTenDangNhp1">TODO</string>
    <string name="button">Button</string>
    <string name="goi20k">Gói 20K</string>
    <string name="goi50k">Gói 50K</string>
    <string name="goi100k">Gói 100K</string>
    <string name="goi500k">Gói 500K</string>
    <string name="todo0">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="TenDN">Tên đăng nhập</string>
    <string name="f">F</string>
    <string name="g">g+</string>
    <string name="dangnhapface">Đăng nhập với Facebook</string>
    <string name="dangnhapgoogle">Đăng nhập với Google</string>
    <string name="đang_ki">Đăng Ký</string>
    <string name="xacNhanMatKhau1">Xác nhận mật khẩu</string>
    <string name="anhđaiien">Đổi ảnh đại diện</string>
    <string name="xacNhanMatKhau2">Xác nhận mật khẩu</string>
    <string name="newPass">Mật khẩu mới</string>
    <string name="doiemail">Đổi Email</string>
    <string name="btnCapNhat">Cập Nhật</string>
    <string name="xacnhanmatkhau3">xác nhận mật khẩu</string>
    <string name="cauB">Button</string>
    <string name="CauC">Button</string>
    <string name="CauD">Button</string>
    <string name="SoCau">1</string>
    <string name="chon1">TODO</string>
    <string name="chon50">TODO</string>
    <string name="trogiupkhangia">TODO</string>
    <string name="goidien">TODO</string>
    <string name="doicau">TODO</string>
    <string name="CauB">Câu B</string>
    <string name="DA_C">Câu C</string>
    <string name="DA_D">Câu D</string>
    <string name="Diem">20.000</string>
    <string name="CauHoi">Câu hỏi</string>
    <string name="coin">TODO</string>
</resources>
