<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity_Dang_ki"
    android:background="@drawable/bgrdt">

    <Button
        android:id="@+id/btn_Muacredit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="#FFC107"
        android:onClick="openMuaCredit"
        android:text="@string/mua_credit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_XepHang" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="184dp"
    android:layout_height="203dp"
    android:layout_marginStart="96dp"
    android:layout_marginTop="70dp"
    android:layout_marginEnd="96dp"
    android:contentDescription="@string/avt"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/btn_QuanLitaiKhoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="#18921D"
        android:text="@string/quan_li_tai_khoan"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FCFFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:onClick="openCapNhatTK"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_TroChoiMoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="#137BCE"
        android:text="@string/tro_choi_moi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_QuanLitaiKhoan"
        android:onClick="OpenLinhVuc"/>

    <Button
        android:id="@+id/btn_LíchuChoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="#9C27B0"
        android:text="@string/lich_su"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_TroChoiMoi" />

    <Button
        android:id="@+id/btn_XepHang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="#CC1D11"
        android:text="@string/bang_xep_hang"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_LíchuChoi" />
</androidx.constraintlayout.widget.ConstraintLayout>