<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgrdt">

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2175F3"
        android:onClick="openQLTK"
        android:text="@string/btnDang_Nhap"
        android:textColor="#FAFAFA"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass_Word0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnQuenMatKhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:background="#9C27B0"
        android:text="@string/Quen_Mat_Khau"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDangNhap"
        android:onClick="openQuenMatKhau"/>

<!--    <TextView-->
<!--        android:background="@drawable/textview_boder"-->
<!--        android:id="@+id/txtTenDangNhp"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="96dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:layout_marginEnd="96dp"-->
<!--        android:drawableTint="#000000"-->
<!--        android:hint="@string/Ten_Dang_Nhap"-->
<!--        android:lineSpacingExtra="12sp"-->
<!--        android:scrollbars="horizontal"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:typeface="normal"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView2"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:visibility="visible" />-->

    <Button
        android:id="@+id/btnDang_Ky"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:background="#F81616"
        android:text="@string/dang_ky"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuenMatKhau"
        android:onClick="openDangKy"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="#0337F4"
        android:text="@string/f"
        android:textColor="#EBF1F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDang_Ky" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="#C51212"
        android:text="@string/g"
        android:textColor="#F0FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="203dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/avt"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/txtUsername1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_contact_24dp"
        android:drawableLeft="@drawable/ic_contact_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#F5F1F1"
        android:ems="10"
        android:hint="@string/TenDN"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#FCFBFB"
        android:textColorHint="#FAF5F5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPass_Word0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_24dp"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#F5F4F4"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FCFAFA"
        android:textColorHint="#FAF7F7"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername1"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dangnhapface"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FAF6F6"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dangnhapgoogle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F7F0F0"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>