<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrdt"
    android:foregroundTint="#FFFFFF"
    tools:context=".activity_Quan_Ly_Tai_Khoan">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="203dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/avt"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/btnCap_Nhap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:background="#1691C9"
        android:text="@string/btnCapNhat"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtXac_Nhan__pass" />

    <EditText
        android:id="@+id/txtUser_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_contact_24dp"
        android:drawableLeft="@drawable/ic_contact_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#FFFFFF"
        android:hint="@string/TenDangNhap"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtEmail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#FFFFFF"
        android:hint="@string/doiemail"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="#FCFAFA"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser_name" />

    <EditText
        android:id="@+id/txtDoi_Pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_24dp"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#FFFFFF"
        android:hint="@string/newPass"
        android:inputType="textVisiblePassword|numberPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="#FAF7F7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail1" />

    <EditText
        android:id="@+id/txtXac_Nhan__pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:drawableStart="@drawable/ic_lock_24dp"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="#FFFFFF"
        android:hint="@string/xacnhanmatkhau3"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|numberPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="#F7F3F3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDoi_Pass" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/anhđaiien"
        android:textColor="#2196F3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>